# postg

./: .gitignore  CMakeLists.txt  Makefile  README  atomicdata.f90  cleanmolden.awk  gxdmopt.sh  makemake.awk  meshmod.f90  param.f90  postg.f90  tools_math.f90  txdmopt.sh  wfnmod.f90  xdm.param  xdm.param.fhiaims
examples/: README
examples/ecps/: gxdmopt.sh  zn_ecp  zn_he.gjf  zn_he_basis
examples/opt/: co2_co2.gjf  gxdmopt.sh
examples/opt_open/: ch4_ch3.gjf
examples/optfreq/: gxdmopt.sh  ne_ne.gjf
examples/sp/: ch4_ch4_manual.gjf  ch4_ch4_script.gjf  gxdmopt.sh  runme.sh
examples/tale1_files/: co2_n2o.m  co2_n2o.xyz  co2_n2o_freq.gjf  co2_n2o_opt.gjf  co2_n2o_sp.gjf  gxdmopt_dz.sh  gxdmopt_tz.sh
tests/: CMakeLists.txt
tests/001_g16_wfn/: 001_dcar.cmake  002_dsph.cmake  003_fcar.cmake  004_fsph.cmake  005_gcar.cmake  006_gsph.cmake  007_spcar.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  CMakeLists.txt
tests/001_g16_wfn/ref/: 001_dcar.pgout  002_dsph.pgout  003_fcar.pgout  004_fsph.pgout  005_gcar.pgout  006_gsph.pgout  007_spcar.pgout  008_spsph.pgout  009_rhf.pgout  010_rohf.pgout  011_uhf.pgout
tests/002_g16_wfx/: 001_dcar.cmake  002_dsph.cmake  003_fcar.cmake  004_fsph.cmake  005_gcar.cmake  006_gsph.cmake  007_spcar.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  012_mp2.cmake  013_ump2.cmake
tests/002_g16_wfx/ref/: 001_dcar.pgout  002_dsph.pgout  003_fcar.pgout  004_fsph.pgout  005_gcar.pgout  006_gsph.pgout  007_spcar.pgout  008_spsph.pgout  009_rhf.pgout  010_rohf.pgout  011_uhf.pgout  012_mp2.pgout  013_ump2.pgout
tests/003_g16_fchk/: 001_dcar.cmake  002_dsph.cmake  003_fcar.cmake  004_fsph.cmake  005_gcar.cmake  006_gsph.cmake  007_spcar.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  012_mp2.cmake  013_ump2.cmake  CMakeLists.txt
tests/003_g16_fchk/ref/: 001_dcar.pgout  002_dsph.pgout  003_fcar.pgout  004_fsph.pgout  005_gcar.pgout  006_gsph.pgout  007_spcar.pgout  008_spsph.pgout  009_rhf.pgout  011_uhf.pgout  012_mp2.pgout  013_ump2.pgout
tests/004_orca4.0_wfn/: 002_dsph.cmake  004_fsph.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  CMakeLists.txt
tests/004_orca4.0_wfn/ref/: 002_dsph.pgout  004_fsph.pgout  008_spsph.pgout  009_rhf.pgout  010_rohf.pgout
tests/005_orca4.0_molden/: 002_dsph.cmake  004_fsph.cmake  006_gsph.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  012_mp2.cmake  013_ump2.cmake
tests/005_orca4.0_molden/ref/: 002_dsph.pgout  004_fsph.pgout  006_gsph.pgout  008_spsph.pgout  009_rhf.pgout  011_uhf.pgout  012_mp2.pgout  013_ump2.pgout
tests/006_orca4.2_wfn/: 002_dsph.cmake  004_fsph.cmake  006_gsph.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  012_mp2.cmake  013_ump2.cmake
tests/006_orca4.2_wfn/ref/: 002_dsph.pgout  004_fsph.pgout  006_gsph.pgout  008_spsph.pgout  009_rhf.pgout  010_rohf.pgout  011_uhf.pgout  012_mp2.pgout  013_ump2.pgout
tests/007_orca4.2_wfx/: 002_dsph.cmake  004_fsph.cmake  006_gsph.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  012_mp2.cmake  013_ump2.cmake  CMakeLists.txt
tests/007_orca4.2_wfx/ref/: 002_dsph.pgout  004_fsph.pgout  006_gsph.pgout  008_spsph.pgout  009_rhf.pgout  010_rohf.pgout  011_uhf.pgout  012_mp2.pgout  013_ump2.pgout
tests/008_orca4.2_molden/: 002_dsph.cmake  004_fsph.cmake  006_gsph.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  012_mp2.cmake  013_ump2.cmake  CMakeLists.txt
tests/008_orca4.2_molden/ref/: 002_dsph.pgout  004_fsph.pgout  006_gsph.pgout  008_spsph.pgout  009_rhf.pgout  011_uhf.pgout  012_mp2.pgout  013_ump2.pgout
tests/009_psi4_molden/: 001_dcar.cmake  002_dsph.cmake  003_fcar.cmake  004_fsph.cmake  005_gcar.cmake  006_gsph.cmake  007_spcar.cmake  008_spsph.cmake  009_rhf.cmake  010_rohf.cmake  011_uhf.cmake  012_mp2.cmake  013_ump2.cmake  CMakeLists.txt  CMakeLists.txt~
tests/009_psi4_molden/ref/: 002_dsph.pgout  004_fsph.pgout  006_gsph.pgout  008_spsph.pgout  009_rhf.pgout  010_rohf.pgout  011_uhf.pgout
